--- a/MobileiaPosnet/MobileiaPosnet.csproj
+++ b/MobileiaPosnet/MobileiaPosnet.csproj
@@ -43,7 +43,10 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Posnet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service.cs" />
+    <Compile Include="Services\CompleteService.cs" />
+    <Compile Include="Services\Service.cs" />
+    <Compile Include="Services\VX520\ServiceVx520.cs" />
+    <Compile Include="Services\VX520\TestService.cs" />
     <Compile Include="Vx520.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
